Finalizando a estilizaçao sem mobilidade

--- a/assets/index.html
+++ b/assets/index.html
@@ -32,6 +32,8 @@
 
     <main>
         <div class="container-main">
+            <img src="/assets/images/forma1.svg" class="forma-um">
+            <img src="/assets/images/forma2.svg" class="forma-dois">
             <div class="container-main-right">
                 <p>
                     The best way to get your coffee without leaving the comfort
@@ -42,9 +44,9 @@
                     make your order
                 </button> <br>
         
-                <img src="/assets/images/instagram.svg">
-                <img src="/assets/images/linkedin.svg">
-                <img src="/assets/images/twitter.svg">
+                <img src="/assets/images/instagram.svg" class="social-media">
+                <img src="/assets/images/linkedin.svg" class="social-media">
+                <img src="/assets/images/twitter.svg" class="social-media">
             </div>
             <div class="container-main-left">
                 <img src="/assets/images/copo.svg">
